--- a/dev/css/_variables.scss
+++ b/dev/css/_variables.scss
@@ -4,23 +4,11 @@ $white: #fff;
 $gray: #bdbdbd;
 $red: #D00002;
 
-$lightGray: #f3f3f3;
-$lightGray-b: #d8d8d8;
-$lightGray-c: #ccc;
-$lightGray-d: #f5f5f5;
-$lightGray-e: #eee;
-
+$lightGray: #ddd;
 $lightRed: #FCECEC;
 
 $darkBlack: #222;
-$darkBlack-b: #505050;
-
 $darkGray: #777;
-$darkGray-b: #555;
-
-$slantRed-a: #e00101;
-$slantRed-b: #C10303;
-$slantRed-c: #CE0101;
 
 //size
 $wideMax: 1000px;
