[mod] 外部JSを_footer.ejsで共通読み込み

--- a/dev/ejs/single-offline.ejs
+++ b/dev/ejs/single-offline.ejs
@@ -69,6 +69,8 @@
     <a href="#searchBox" class="controls_item"><img src="" alt="コンテンツを検索する"></a>
   </div>
 
+<%- include('inc/_footer',args) %>
+
 </body>
 
 </html>
