--- a/dev/ejs/index.ejs
+++ b/dev/ejs/index.ejs
@@ -103,9 +103,7 @@
 
   </main>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script src="/assets/js/lib.js"></script>
-<script src="/assets/js/common.js"></script>
+<%- include('inc/_footer',args) %>
 </body>
 
 </html>
