--- a/dev/ejs/archive.ejs
+++ b/dev/ejs/archive.ejs
@@ -15,19 +15,18 @@
 
   <main class="main">
 
-    <h1>Fiction<span>小説</span></h1>
+    <h1 class="heading-02">Fiction<span>小説</span></h1>
 
     <ul class="list">
       <% for (var i = 10; i > 0; i--) { %>
       <li class="list_item"><section>
         <a href="" class="list_link">
           <div class="list_data">
-            <p class="list_label">fic</p>
-            <p class="list_date">2017.01.10</p>
-            <p class="list_series">エーテル欠乏症</p>
             <h2 class="list_title">陽炎のうつしび</h2>
             <p class="list_content">あと何時も持つまい。いずれ蕩けて消えてしまうと言うのならば、いっそこの手で何もなかったことにしてしまおう。</p>
+            <p class="list_series">エーテル欠乏症</p>
             <p class="list_tag">幸真, 幸村精市, 真田弦一郎</p>
+            <p class="list_date">2017.01.10</p>
           </div>
         </a>
       </section></li>
