--- a/dev/ejs/index.ejs
+++ b/dev/ejs/index.ejs
@@ -9,7 +9,7 @@
 <%- include('inc/_meta', args) %>
 </head>
 
-<body id="pagetop">
+<body id="pagetop" class="index">
 
 <%- include('inc/_header',args) %>
 
