--- a/dev/ejs/archive-2.ejs
+++ b/dev/ejs/archive-2.ejs
@@ -17,7 +17,7 @@
 
     <h1 class="heading-02">Fiction<span>小説</span></h1>
 
-    <ul class="list column column-2col masonry">
+    <ul class="list column column-2col masonry jscroll">
       <li class="columnSizer"></li>
       <li class="columnGutter"></li>
       <% for (var i = 5; i > 0; i--) { %>
@@ -44,12 +44,6 @@
       </section></li>
       <% } %>
     </ul>
-
-    <!-- <div class="loading"><div class="loading_inner"><i class="fa fa-spinner" aria-hidden="true"></i></div></div> -->
-
-    <div class="navigation">
-      <a href="archive-2.html"></a>
-    </div>
 
   </main>
 
