--- a/dev/css/_layout.scss
+++ b/dev/css/_layout.scss
@@ -4,6 +4,20 @@
 // Common
 //----------------------------------------
 
+@keyframes flash {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+html {
+  animation: flash .4s ease-out;
+}
+
+
 //----------------------------------------
 // Header
 //----------------------------------------
@@ -236,8 +250,57 @@
 }
 
 //----------------------------------------
-// Footer
+// Controls
 //----------------------------------------
+
+.controls {
+  transition: right .3s, opacity .3s;
+  @include clearfix;
+  opacity: 0.1;
+  position: fixed;
+  right: -100px;
+  bottom: 50px;
+  background: $black;
+  border-radius: 4px 0 0 4px / 4px 0 0 4px;
+  font-size: 2rem;
+  color: $white;
+  &[data-itemcount="3"] {
+    right: -150px;
+  }
+  &.active {
+    opacity: 1;
+    right: 0;
+  }
+  @include media(both) {
+    bottom: auto;
+    top: 80px;
+  }
+}
+
+.controls_button {
+  background: transparent;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  border-right: 1px solid lighten($black, 5%);
+}
+
+.controls_item {
+  display: flex;
+  float: left;
+  justify-content: center;
+  align-items: center;
+  width: 50px;
+  height: 50px;
+  color: $white;
+  vertical-align: top;
+  &:first-child {
+    color: darken($white, 20%);
+  }
+  span {
+    display: none;
+  }
+}
 
 //----------------------------------------
 // Notice Wrap
@@ -270,3 +333,4 @@
     font-size: 1.2rem;
   }
 }
+
