--- a/dev/ejs/inc/_meta.ejs
+++ b/dev/ejs/inc/_meta.ejs
@@ -11,3 +11,4 @@ if (pagename !== 'undefined') {
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" content="noindex, nofollow">
   <link rel="stylesheet" href="/assets/css/common.css">
+  <script src="https://use.fontawesome.com/885b88a09d.js"></script>
