--- a/dev/ejs/index.ejs
+++ b/dev/ejs/index.ejs
@@ -92,7 +92,7 @@
             </dd>
           </dl>
           <p class="form_actions">
-            <input type="submit" name="actionSubmit" value="送信" class="button">
+            <input type="submit" name="actionSubmit" value="問い合わせを送信" class="button">
           </p>
         </form>
       </section>
