--- a/dev/ejs/index.ejs
+++ b/dev/ejs/index.ejs
@@ -40,6 +40,7 @@
           </a></li>
           <% } %>
         </ul>
+        </ul>
       </section>
 
       <section class="col">
@@ -92,7 +93,7 @@
             </dd>
           </dl>
           <p class="form_actions">
-            <input type="submit" name="actionSubmit" value="問い合わせを送信" class="button">
+            <input type="submit" name="actionSubmit" value="問い合わせを" class="button">
           </p>
         </form>
       </section>
