--- a/dev/ejs/inc/_footer.ejs
+++ b/dev/ejs/inc/_footer.ejs
@@ -1,3 +1,19 @@
+<div class="controls" data-itemcount="3">
+  <button class="controls_item controls_button js-toggleMenu"><i class="fa  fa-ellipsis-h" aria-hidden="true"></i></button>
+  <a href="#pagetop" class="controls_item"><i class="fa fa-angle-double-up" aria-hidden="true"></i><span>ページの上部にもどる</span></a>
+  <a href="#changeFontSize" class="controls_item js-changeFontSize"><i class="fa fa-font" aria-hidden="true"></i><span>フォントサイズを変更する</span></a>
+  <a href="#searchBox" class="controls_item"><i class="fa fa-search" aria-hidden="true"></i><span>コンテンツを検索する</span></a>
+</div>
+
+<div class="changeFontSize" id="changeFontSize">
+  <p class="changeFontSize_heading">文字サイズ変更</p>
+  <ul class="changeFontSize_set">
+    <li class="changeFontSize_item"><button class="changeFontSize_button button">大</button></li>
+    <li class="changeFontSize_item"><button class="changeFontSize_button button">中</button></li>
+    <li class="changeFontSize_item"><button class="changeFontSize_button button">小</button></li>
+  </ul>
+</div>
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="/assets/js/lib.js"></script>
 <script src="/assets/js/common.js"></script>
